@@ -1,9 +1,18 @@
 2009-03-10  Tao Wang  <dancefire@gmail.com>
 
+	* cpp/src/unit_test/unit_test_serialization.hpp:
+		Remove unused strings.
+		Add dump code for gcc -O3 compile
+	* cpp/src/unit_test/unit_test_segment.hpp:
+		Fix output locale bug. Now output can display correctly.
+
+2009-03-10  Tao Wang  <dancefire@gmail.com>
+
 	* cpp/src/unit_test/unit_test_longtime.hpp:
 		Add testcase test_Segment_performance() for performance evaluation.
 	
 2009-03-09  Tao Wang  <dancefire@gmail.com>
+
 	* cpp/include/openclas/serialization.hpp:
 	* cpp/include/openclas/segment.hpp:
 	* cpp/include/openclas/utility.hpp:
